--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@
 <a href="schedule.html"> Schedule </a>
 <a href="monhegan.html"> About Monhegan </a>
 <a href="responses.html"> RSVP </a>
-</nav?
+  </nav>
