--- a/index.html
+++ b/index.html
@@ -11,3 +11,6 @@
 <a href="monhegan.html"> About Monhegan </a>
 <a href="responses.html"> RSVP </a>
   </nav>
+
+  <h1> We got married - come help us celebrate! </h1>
+  <p> As some of you may know, we got hitched in December 2016 at the Isabella Stewart Gardener Museum in Boston. We've 
